# cpp-common

./: .gitignore  CMakeLists.txt  Makefile
common/: log.cpp  log.h
test/: test.cc
tests/: test.cc
